# prap-25-26

./: .gitignore  README.md  generate_arm_kinematics.m  generate_poker_move.m  requirements.txt  simulation_test.m
docs/: UI.md.md
gui/: README.md  dashboard.kv  dashboard.py  main_window.py  styles.qss  utils.py
poker/: __init__.py  action.py  card.py  chips.py  player.py  position.py
scripts/: start_game.sh
services/: camera_service.py
src/: README copy.md  README.md
src/arm_interface/: CMakeLists.txt  package.xml
src/arm_interface/msg/: MotorFeedback.msg  MotorPos.msg
src/lerobot_description/: CMakeLists.txt  package.xml
src/lerobot_description/launch/: so101_display.launch.py  so101_gazebo.launch.py
src/lerobot_description/rviz/: display.rviz
src/lerobot_description/urdf/: so101.urdf.xacro  so101_base.xacro  so101_gazebo.xacro  so101_ros2_control.xacro
src/poker_bringup/: CMakeLists.txt  package.xml
src/poker_bringup/launch/: poker_arm.launch.py
src/poker_control/: package.xml  setup.cfg  setup.py
src/poker_control/config/: poker_controllers.yaml
src/poker_control/poker_control/: controller_node.py  generate_kinematics.py  sim_bridge.py  test_kinematics.py
src/poker_dashboard/: package.xml  setup.cfg  setup.py
src/poker_dashboard/poker_dashboard/: dashboard_node.py
src/poker_interfaces/: CMakeLists.txt  package.xml
src/poker_interfaces/msg/: MotorFeedback.msg  ServoCommand.msg  TargetJoints.msg  TargetPose.msg
src/ros_to_pi/: package.xml
src/ros_to_pi/ros_to_pi/: ros_to_pi_node.py
src/scservo_driver/: CMakeLists.txt  package.xml
src/scservo_driver/src/: scservo_driver_node.cpp
src/scservo_ros2/: CMakeLists.txt  package.xml
src/scservo_ros2/msg/: MotorPos.msg
src/scservo_ros2/src/: scservo_feedback_node.cpp  scservo_node.cpp  scservo_node1.cpp
src/scservo_ros2/src/scservo_sdk/: Makefile
