<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>poker_dashboard</name>
  <version>0.0.1</version>
  <description>Qt6 Dashboard for Poker Arm</description>
  <maintainer email="faisallawan08@gmail.com">Faisal</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>poker_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
