<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scservo_driver</name>
  <version>0.0.1</version>
  <description>C++ Driver for STS3215 Servos</description>
  <maintainer email="faisallawan08@gmail.com">Faisal</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>poker_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
